25S1 assign2：comment follow design recipe